--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <style>
       body {
         font-family: 'Poppins', sans-serif;
+        background-color: #FAF7F0; /* Tom de creme mais claro */
+        color: #333333; /* Cinza escuro para melhor contraste */
+        font-size: 19px;
+        line-height: 1.8;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        text-rendering: optimizeLegibility;
       }
       h1, h2, h3, .font-display {
         font-family: 'Playfair Display', serif;
@@ -49,7 +56,7 @@
 }
 </script>
 </head>
-  <body class="bg-amber-50">
+  <body>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
