--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
   }
 }
 </script>
+<!-- Adicionado Babel para transpilar TSX/JSX no navegador -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <!-- O tipo do script foi alterado para 'text/babel' para que o Babel possa processá-lo. -->
+    <!-- data-presets informa ao Babel para usar as regras de React (JSX) e TypeScript. -->
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
