feat: Improve recipe display modularity
Refactors the RecipeDisplay component by introducing subcomponents for better organization and readability. This change enhances the maintainability of the UI for recipe presentation.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M7 14.225c0 .399-.08.79-.232 1.162-.325.815-1.13 1.363-2.018 1.363h-.5a2.25 2.25 0 0 1-2.25-2.25v-1.5a2.25 2.25 0 0 1 2.25-2.25h.5c.888 0 1.693.548 2.018 1.363.152.372.232.763.232 1.162Z' /%3e%3cpath d='M22 13.225c0-.399.08-.79.232-1.162.325-.815 1.13-1.363 2.018-1.363h.5a2.25 2.25 0 0 1 2.25 2.25v1.5a2.25 2.25 0 0 1-2.25-2.25h-.5c-.888 0-1.693-.548-2.018-1.363A2.493 2.493 0 0 1 22 14.725Z' transform='matrix(-1 0 0 1 24 0)' /%3e%3cpath d='M4 14.725V18a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-3.275' /%3e%3cpath d='M5 10a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v2H5v-2Z' /%3e%3cpath d='M12 2v2' /%3e%3cpath d='M15 4v2' /%3e%3cpath d='M9 4v2' /%3e%3c/svg%3e" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M7 14.225c0 .399-.08.79-.232 1.162-.325.815-1.13 1.363-2.018 1.363h-.5a2.25 2.25 0 0 1-2.25-2.25v-1.5a2.25 2.25 0 0 1 2.25-2.25h.5c.888 0 1.693.548 2.018 1.363.152.372.232.763.232 1.162Z' /%3e%3cpath d='M22 13.225c0-.399.08-.79.232-1.162.325-.815 1.13-1.363 2.018-1.363h.5a2.25 2.25 0 0 1 2.25 2.25v1.5a2.25 2.25 0 0 1-2.25-2.25h-.5c-.888 0-1.693.548-2.018-1.363A2.493 2.493 0 0 1 22 14.725Z' transform='matrix(-1 0 0 1 24 0)' /%3e%3cpath d='M4 14.725V18a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-3.275' /%3e%3cpath d='M5 10a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v2H5v-2Z' /%3e%3cpath d='M12 2v2' /%3e%3cpath d='M15 4v2' /%3e%3cpath d='M9 4v2' /%3e%3c/svg%3e" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chef IA</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -48,9 +48,10 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/"
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/"
   }
 }
 </script>
